--- a/sass/partials/_typography.sass
+++ b/sass/partials/_typography.sass
@@ -24,6 +24,7 @@ a
       font-size: 0.5em
       font-weight: normal
 
+
 h2, h3, h4, h5
   font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif
   margin-bottom: 0.5em
@@ -40,6 +41,15 @@ h2, h3, h4, h5
     &:hover
       text-decoration: underline
 
+#disqus_thread
+  h2, h3, h4, h5
+    span
+      font-size: inherit
+      font-weight: inherit
+      display: inline
+      height: inherit
+      font-style: inherit
+      
 ol, ul
   margin-bottom: 1em
 
